[package]
name = "keyauth"
version = "1.0.23"
edition = "2021"
description = "keyauth library"
readme = "README.md"
repository = "https://github.com/D0A1V2I3D/keyauth-rust"
license = "MIT"
documentation = "https://docs.rs/keyauth/"

[dependencies]
aes = {version = "0.7.4", optional = true}
block-modes = {version = "0.8.1", optional = true}
sha256 = {version = "1.1.1", optional = true}
webbrowser = "0.8.0"
serde_json = "1.0.86"
machine_uuid = "0.1.0"
hmac-sha256 = { version = "1.1.4", optional = true}
hex = "0.4.3"
base16 = "0.2.1"
uuid = {version="1.2.1", features=["v4"]}
serde = { version = "1.0.126", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["blocking"] }

[features]
default = ["v1_2"]
v1_0 = ["dep:aes", "dep:block-modes", "dep:sha256"]
v1_1 = []
v1_2 = ["dep:hmac-sha256"]
seller = []
all = ["v1_0", "v1_1", "v1_2", "seller"]

[package.metadata.docs.rs]
features = ["all"]