[package]
name = "keyauth-obf"
version = "1.2.2.1"
edition = "2021"
description = "keyauth library"
readme = "README.md"
repository = "https://github.com/D0A1V2I3D/keyauth-rust-new"
license = "MIT"
documentation = "https://docs.rs/keyauth/"

[dependencies]
webbrowser = "0.8.0"
serde_json = "1.0.86"
machine_uuid = "0.1.0"
hmac-sha256 = { version = "1.1.4", optional = true}
hex = "0.4.3"
base16 = "0.2.1"
uuid = {version="1.2.1", features=["v4"] }
serde = { version = "1.0.126", features = ["derive"] }
reqwest = { version = "0.11.12" }
httparse = { version = "1.8.0", optional = true }
goldberg = "0.1.0"
debugoff = { version = "0.2.2", features = ["obfuscate", "syscallobf"] }

[features]
default = ["v1_2", "all"]
v1_2 = ["dep:hmac-sha256"]
all = ["v1_2", "web_loader"]
web_loader = ["dep:httparse"]

[package.metadata.docs.rs]
features = ["all"]
